--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11103,7 +11103,7 @@ html :where(img[class*='wp-image-']) {
 }
 @media (-webkit-max-device-pixel-ratio: 2) {
   .dir.header-filter__controls-btn[class][class] {
-    border: 0.5px solid;
+    border: 0.5px solid rgb(0 0 0 / 0.3);
   }
 }
 .header-filter__controls-btn[class][class]:focus-visible {
