--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60463,3 +60463,636 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._1sstjj60 {
   margin-right: 12px !important;
 }
+
+._ekwjz2 {
+  width: 100% !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+}
+
+@media (min-width: 744px) {
+  ._ekwjz2 {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._ekwjz2 {
+    padding-left: 80px !important;
+    padding-right: 80px !important;
+  }
+}
+
+@media (min-width: 1440px) {
+  ._ekwjz2 {
+    max-width: 1440px !important;
+  }
+}
+
+.csrtfuq[class][class] {
+  display: initial;
+}
+
+.c1yo0219[class][class]::before {
+  display: flex;
+  content: '';
+}
+
+.c1yo0219[class][class]::after {
+  display: flex;
+  content: '';
+}
+
+._e1lnib {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+  padding-top: 48px !important;
+  padding-bottom: 20rem !important;
+}
+
+@media (min-width: 744px) {
+  ._e1lnib {
+      padding-top: 80px !important;
+      padding-bottom: 11rem !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._e1lnib {
+    padding-bottom: 13rem !important;
+  }
+}
+
+
+@media (min-width: 1440px) {
+  ._e1lnib {
+      padding-top: 96px !important;
+      padding-bottom: 15rem !important;
+  }
+}
+
+._1trgpf1 {
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+}
+
+._1x1d238 {
+    -ms-flex-item-align: end !important;
+    padding-top: 30px !important;
+    -webkit-align-self: flex-end !important;
+    align-self: flex-end !important;
+}
+
+@media (min-width: 1128px) {
+  ._1x1d238 {
+      display: none !important;
+  }
+}
+
+._3uceys {
+  display: flex !important;
+  height: 100% !important;
+  list-style: none !important;
+  overflow: auto hidden !important;
+  padding-left: 0px !important;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+  min-width: 100% !important;
+  /* scroll-snap-type: x mandatory !important; */
+  scroll-behavior: smooth;
+}
+
+._1aq9nzc {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  position: absolute !important;
+  width: 100% !important;
+  height: 100% !important;
+  top: 0px !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  pointer-events: none !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+}
+
+._o1xf7l {
+    display: none !important;
+}
+
+@media (min-width: 1128px) {
+  ._o1xf7l {
+      margin-top: 24px !important;
+      display: block !important;
+  }
+}
+
+._145ocfuw {
+  border-style: solid !important;
+  border-color: transparent !important;
+  scroll-snap-align: start !important;
+  scroll-snap-stop: always !important;
+  -webkit-flex: 0 0 100% !important;
+  -ms-flex: 0 0 100% !important;
+  flex: 0 0 100% !important;
+  max-width: 100% !important;
+}
+
+._145ocfuw {
+  border-style: solid !important;
+  border-color: transparent !important;
+  scroll-snap-align: start !important;
+  scroll-snap-stop: always !important;
+  -webkit-flex: 0 0 100% !important;
+  -ms-flex: 0 0 100% !important;
+  flex: 0 0 100% !important;
+  max-width: 100% !important;
+}
+
+._1yfus1e {
+  height: 100% !important;
+}
+
+._l4j04s {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  height: 100% !important;
+  position: relative !important;
+  border: 1px solid #DDDDDD !important;
+  background: #F7F7F7 !important;
+  border-radius: 12px !important;
+  overflow: hidden !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+}
+
+@media (min-width: 1128px) {
+  ._l4j04s {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: horizontal !important;
+    -webkit-flex-direction: row !important;
+    -ms-flex-direction: row !important;
+    flex-direction: row !important;
+    min-height: 520px !important;
+  }
+}
+
+._e296pg {
+  position: relative !important;
+}
+
+._1ji2c61h {
+  display: block !important;
+  height: 100% !important;
+  left: 0px !important;
+  position: absolute !important;
+  top: 0px !important;
+  width: 100% !important;
+  z-index: 1 !important;
+  border-radius: inherit !important;
+  outline: none !important;
+  margin-top: 1px !important;
+}
+
+@media (min-width: 1128px) {
+  ._1ia7gpq {
+    position: absolute !important;
+    top: 0px !important;
+    left: 0px !important;
+    bottom: 0px !important;
+    width: 50% !important;
+  }
+}
+
+._1870dxde {
+  overflow: hidden !important;
+  display: block !important;
+  position: relative !important;
+  aspect-ratio: 3 / 2 !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+@media (min-width: 1128px) {
+  ._1870dxde {
+      aspect-ratio: auto !important;
+      width: 100% !important;
+      height: 100% !important;
+  }
+}
+
+._17il711z {
+  max-width: 100% !important;
+  object-fit: cover !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+._1y2p1kv {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+}
+
+@media (min-width: 1128px) {
+  ._1y2p1kv {
+      margin-left: 50% !important;
+  }
+}
+
+._puv670 {
+  padding: 24px !important;
+}
+
+@media (min-width: 744px) {
+  ._puv670 {
+    padding: 48px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._puv670 {
+    padding-right: 65px !important;
+  }
+}
+
+._1y3dy8a5 {
+  margin-bottom: 0px !important;
+  color: #222222 !important;
+  font-weight: 400 !important;
+  font-size: 26px !important;
+  line-height: 30px !important;
+}
+
+._j8eucb {
+    margin-top: 12px !important;
+    margin-bottom: 16px !important;
+    display: -webkit-box !important;
+    display: -moz-box !important;
+    display: -ms-flexbox !important;
+    display: -webkit-flex !important;
+    display: flex !important;
+}
+
+@media (min-width: 1128px) {
+  ._j8eucb {
+      margin-top: 16px !important;
+      margin-bottom: 48px !important;
+  }
+}
+
+._60hvkx2 {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+
+._jqnjpq {
+  margin-left: 8px !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+._zm2q3t {
+    color: #222222 !important;
+    font-weight: 400 !important;
+    font-size: 16px !important;
+    line-height: 24px !important;
+}
+
+@media (min-width: 744px) {
+  ._zm2q3t {
+    font-size: 18px !important;
+    line-height: 28px !important;
+  }
+}
+
+._yzmc35 {
+  display: none !important;
+}
+
+@media (min-width: 1128px) {
+  ._yzmc35 {
+    display: block !important;
+    margin-top: auto !important;
+    position: absolute !important;
+    width: -webkit-calc(100% + 48px) !important;
+    width: -moz-calc(100% + 48px) !important;
+    width: calc(100% + 48px) !important;
+    left: -24px !important;
+  }
+}
+
+.c12qktqn[class][class] {
+  display: flex;
+  justify-content: space-between;
+}
+
+.dir.b1krdoa9[class][class] {
+  transition: opacity 0.2s ease;
+}
+
+.b1krdoa9[class][class] {
+  pointer-events: all;
+  z-index: 2;
+}
+
+._1kjng5b {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  display: -webkit-inline-box;
+  display: -moz-inline-box ;
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-flex;
+  display: inline-flex;
+  border-radius: 50% !important;
+  border: 0 !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: #222222 !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  cursor: pointer !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+  border-style: solid !important;
+  border-width: 1px !important;
+  background-clip: padding-box !important;
+  border-color: rgba(0, 0, 0, 0.08) !important;
+  box-shadow: 0px 0px 0px 1px transparent, 0px 0px 0px 4px transparent, 0px 2px 4px rgb(0 0 0 / 18%) !important;
+  -webkit-transition: -webkit-transform 0.25s ease,transform 0.25s ease !important;
+  -moz-transition: transform 0.25s ease !important;
+  transition: -ms-transform 0.25s ease,-webkit-transform 0.25s ease,transform 0.25s ease !important;
+  width: 48px !important;
+  height: 48px !important;
+}
+
+.dir.v101fnjq[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+.v101fnjq[class][class] {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+._o1xf7l {
+  display: none !important;
+}
+
+@media (min-width: 1128px) {
+  ._o1xf7l {
+    margin-top: 24px !important;
+    display: block !important;
+  }
+}
+
+.c13hoerw[class][class] {
+  align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+.d1m52xte[class][class] {
+  display: flex;
+  overflow: hidden;
+  max-width: 180;
+}
+
+@supports (overflow:clip) {
+  .d1m52xte[class][class] {
+    overflow: clip;
+  }
+}
+
+.dir.d1dz9bym[class][class] {
+  margin: 0;
+  padding: 0;
+  transition: transform 0.2s cubic-bezier(0.455,0.03,0.515,0.955);
+}
+.d1dz9bym[class][class] {
+  align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.455,0.03,0.515,0.955);
+}
+
+.dir.d1vcioow[class][class] {
+  background-color: rgba(176,176,176,0.8);
+  border-radius: 50%;
+  margin-left: 6px;
+  margin-right: 6px;
+  transition: opacity 0.2s cubic-bezier(0.455,0.03,0.515,0.955);
+}
+.d1vcioow[class][class] {
+  height: 6px;
+  min-width: 6px;
+  opacity: 1;
+  width: 6px;
+}
+
+.dot96k7[class][class] {
+  opacity: 1;
+}
+.d1vcioow[class][class] {
+  height: 6px;
+  min-width: 6px;
+  opacity: 1;
+  width: 6px;
+}
+
+.dir.d1vcioow[class][class] {
+  background-color: rgba(176,176,176,0.8);
+  border-radius: 50%;
+  margin-left: 6px;
+  margin-right: 6px;
+  transition: opacity 0.2s cubic-bezier(0.455,0.03,0.515,0.955);
+}
+
+.dir.dot96k7[class][class] {
+  background: #222;
+}
+
+._1uytoza {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  color: #222222 !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  margin-left: auto !important;
+}
+
+.a8jt5op[class][class] {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+._1l1vk8w {
+  margin-right: 16px !important;
+  white-space: nowrap !important;
+}
+
+._jro6t0 {
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+}
+
+._sp8hvh {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important;
+  display: -webkit-inline-box !important;
+  display: -moz-inline-box !important;
+  display: -ms-inline-flexbox !important;
+  display: -webkit-inline-flex !important;
+  display: inline-flex !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: #222222 !important;
+  background-color: transparent !important;
+  cursor: pointer !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  -webkit-transition: -webkit-transform 0.25s ease,transform 0.25s ease !important;
+  -moz-transition: transform 0.25s ease !important;
+  transition: -ms-transform 0.25s ease,-webkit-transform 0.25s ease,transform 0.25s ease !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+  width: 32px !important;
+  height: 32px !important;
+}
+
+._sp8hvh:disabled {
+  opacity: 0.5 !important;
+  cursor: not-allowed !important;
+  color: #DDDDDD !important;
+  -webkit-transform: scale(1) !important;
+  -ms-transform: scale(1) !important;
+  transform: scale(1) !important;
+}
+
+._e296pg {
+  position: relative !important;
+}
+
+._krjbj {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+
+._pog3hg {
+  margin-left: 8px !important;
+}
