--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -53382,6 +53382,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
 }
+
+._1ynkfbb:disabled {
+  opacity: 1 !important;
+  cursor: not-allowed !important;
+  color: #222222 !important;
+  border: 1px solid #222222 !important;
+}
+
 .mb-10 {
   margin-bottom: 40px !important;
 }
@@ -62568,3 +62576,561 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   height: 100% !important;
   width: 100% !important;
  }
+
+._gp8i7f {
+    margin-top: 80px !important;
+    margin-bottom: 80px !important;
+    overflow: hidden !important;
+}
+
+._10qs2gf {
+  -webkit-box-lines: multiple !important;
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: stretch !important;
+  -ms-flex-align: stretch !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: stretch !important;
+  align-items: stretch !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  -webkit-flex-wrap: wrap !important;
+  -ms-flex-wrap: wrap !important;
+  flex-wrap: wrap !important;
+  width: 100% !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+@media (min-width: 375px)
+{
+  ._10qs2gf {
+    padding-left: 24px !important;
+    padding-right: 24px !important;
+  }
+}
+
+@media (min-width: 744px) {
+  ._10qs2gf {
+      padding-left: 40px !important;
+      padding-right: 40px !important;
+  }
+}
+
+@media (min-width: 950px) {
+  ._10qs2gf {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+}
+
+@media (min-width: 1128px) {
+  ._10qs2gf {
+    padding-left: 80px !important;
+    padding-right: 80px !important;
+  }
+}
+
+@media (min-width: 1440px) {
+  ._10qs2gf {
+    max-width: 1440px !important;
+    padding-left: 80px !important;
+    padding-right: 80px !important;
+  }
+}
+
+._1i7b2h28 {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+}
+
+._vqtjxh {
+  margin-top: 8px !important;
+  margin-bottom: 40px !important;
+}
+
+@media (min-width: 950px) {
+  ._vqtjxh {
+    margin-bottom: 56px !important;
+  }
+}
+
+._1exxkxo {
+  background-color: #222222 !important;
+  border-radius: 4px !important;
+  border: solid 1px #222222 !important;
+  color: #FFFFFF !important;
+  display: inline-block !important;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif !important;
+  font-weight: 600 !important;
+  text-transform: uppercase !important;
+  text-align: center !important;
+  padding-top: 1px !important;
+  padding-bottom: 1px !important;
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+}
+
+._rymweu {
+    color: #222222 !important;
+    font-size: 40px !important;
+    letter-spacing: -0.02em !important;
+    line-height: 110% !important;
+    margin-top: 16px !important;
+    margin-bottom: 24px !important;
+}
+
+@media (min-width: 950px) {
+  ._rymweu {
+    font-size: 56px !important;
+    letter-spacing: -0.04em !important;
+    margin-bottom: 32px !important;
+    width: 75% !important;
+  }
+}
+
+
+._w9t44o {
+  display: block !important;
+  color: #717171 !important;
+  font-size: 22px !important;
+  line-height: 26px !important;
+  font-weight: 400 !important;
+  margin: 0px !important;
+}
+
+@media (min-width: 950px) {
+  ._w9t44o {
+      width: 50% !important;
+  }
+}
+
+._1gcxey2 {
+  -webkit-box-pack: justify !important;
+  -ms-flex-pack: justify !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: space-between !important;
+  justify-content: space-between !important;
+  margin-bottom: 40px !important;
+}
+
+@media (min-width: 950px) {
+  ._1gcxey2 {
+    margin-bottom: 80px !important;
+  }
+}
+
+._dj903s {
+  -webkit-box-lines: multiple !important;
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: stretch !important;
+  -ms-flex-align: stretch !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: stretch !important;
+  align-items: stretch !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  -webkit-flex-wrap: wrap !important;
+  -ms-flex-wrap: wrap !important;
+  flex-wrap: wrap !important;
+  width: 100% !important;
+}
+
+._1d1wrwz {
+  color: #717171 !important;
+  font-size: 14px !important;
+  font-weight: 600 !important;
+  line-height: 130% !important;
+  width: 50% !important;
+}
+
+@media (min-width: 1128px) {
+  ._1d1wrwz {
+    width: auto !important;
+  }
+
+  ._1d1wrwz:first-child {
+    margin-right: 80px !important;
+  }
+}
+
+._uhlm2 {
+  display: block !important;
+}
+
+._685omm {
+  font-style: normal !important;
+}
+
+._siy8gh {
+  display: none !important;
+}
+
+@media (min-width: 744px) {
+  ._siy8gh {
+    display: block !important;
+  }
+}
+
+._mloh9aq {
+  background: none !important;
+  padding: 9px !important;
+  outline: none !important;
+  border: 1px solid rgb(235, 235, 235) !important;
+  border-radius: 8px !important;
+}
+
+._1hafqj46 {
+  margin-top: 0px !important;
+  overflow: hidden !important;
+  margin-left: -24px !important;
+  margin-right: -24px !important;
+  margin-bottom: 64px !important;
+}
+
+@media (min-width: 744px)
+{
+  ._1hafqj46 {
+    border-radius: 16px !important;
+  }
+}
+
+._dxw82rg {
+  overflow: hidden !important;
+  display: block !important;
+  position: relative !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._1ldrap5w {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  max-width: 100% !important;
+  position: absolute !important;
+  top: 0px !important;
+  bottom: 0px !important;
+  left: 0px !important;
+  right: 0px !important;
+  height: 100% !important;
+  width: 100% !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+}
+
+._13hye3m {
+  position: relative !important;
+  width: 100% !important;
+  margin-left: 0% !important;
+  margin-right: 0% !important;
+}
+
+@media (min-width: 375px)
+{
+  ._13hye3m {
+    width: 100% !important;
+  }
+}
+
+@media (min-width: 950px)
+{
+  ._13hye3m {
+    width: 58.333333333333336% !important;
+    margin-left: 16.666666666666664% !important;
+  }
+}
+
+@media (min-width: 1128px)
+{
+  ._13hye3m {
+    width: 58.333333333333336% !important;
+    margin-left: 16.666666666666664% !important;
+  }
+}
+
+._m90lh8 {
+  font-size: 18px !important;
+  line-height: 190% !important;
+  font-weight: 400 !important;
+  color: #222222 !important;
+  margin-top: 0px !important;
+}
+
+._7c3b72l {
+    position: relative !important;
+    border-style: none !important;
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+}
+
+@media (min-width: 950px) {
+  ._7c3b72l {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+  }
+}
+
+._iskyu85 {
+  font-size: 18px !important;
+  line-height: 190% !important;
+  font-weight: 400 !important;
+  color: #222222 !important;
+  margin-top: 0px !important;
+}
+
+._1opgm0f8 {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 40px !important;
+  margin-bottom: 0px !important;
+}
+
+@media (min-width: 950px)
+{
+  ._1opgm0f8 {
+    margin-top: 40px !important;
+    margin-left: -88px !important;
+    margin-right: -88px !important;
+    margin-bottom: 0px !important;
+  }
+}
+
+._dxw82rg {
+  overflow: hidden !important;
+  display: block !important;
+  position: relative !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._1c4kjhgd {
+  max-width: 100% !important;
+  border-radius: 8px !important;
+}
+
+@media (min-width: 950px)
+{
+  ._1c4kjhgd {
+    border-radius: 12px !important;
+  }
+}
+
+._dhdpy6 {
+  color: #717171 !important;
+  font-size: 14px !important;
+  line-height: 150% !important;
+  overflow: hidden !important;
+  position: relative !important;
+  z-index: 2 !important;
+}
+
+._14j7tpu5 {
+  font-size: 18px !important;
+  line-height: 190% !important;
+  font-weight: 400 !important;
+  color: #222222 !important;
+  margin-top: 0px !important;
+  margin-bottom: 10px !important;
+}
+
+._zhwj4y {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 40px !important;
+  margin-bottom: 40px !important;
+}
+
+@media (min-width: 950px) {
+  ._zhwj4y {
+    margin-top: 64px !important;
+    margin-bottom: 64px !important;
+  }
+}
+
+._jro6t0 {
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+}
+
+._ltvnuk {
+  -ms-grid-columns: repeat(12, 1fr) !important;
+  display: -ms-grid !important;
+  display: grid !important;
+  grid-template-columns: repeat(12, 1fr) !important;
+}
+
+._1kqs2uey {
+  min-width: 0px !important;
+  grid-column: span 12 !important;
+}
+
+@media (min-width: 744px)
+{
+  ._1kqs2uey {
+    grid-column: span 6 !important;
+  }
+}
+
+@media (min-width: 950px)
+{
+  ._1kqs2uey {
+    grid-column: span 6 !important;
+  }
+}
+
+@media (min-width: 1128px)
+{
+  ._1kqs2uey {
+    grid-column: span 6 !important;
+  }
+}
+
+._dxw82rg {
+  overflow: hidden !important;
+  display: block !important;
+  position: relative !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._2dwn2pi {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+  margin-top: 40px !important;
+  margin-bottom: 10px !important;
+}
+
+@media (min-width: 950px)
+{
+  ._2dwn2pi {
+    margin-top: 64px !important;
+    margin-bottom: 10px !important;
+  }
+}
+
+@media (min-width: 950px)
+{
+  ._1t23zgyt {
+    margin-top: 80px !important;
+    margin-bottom: 80px !important;
+  }
+}
+
+._1t23zgyt {
+    position: relative !important;
+    border-style: none !important;
+    margin-top: 40px !important;
+    margin-bottom: 40px !important;
+    border-top: 1px solid #DBDBDB !important;
+}
+
+
+
+._19ypqypb {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    margin-bottom: 10px !important;
+    margin-top: 10px !important;
+}
+
+@media (min-width: 950px)
+{
+  ._19ypqypb {
+    margin-bottom: 10px !important;
+    margin-top: 10px !important;
+  }
+}
+
+._ce0gxz2 {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-bottom: 10px !important;
+  margin-top: 0px !important;
+}
+
+
+@media (min-width: 950px)
+{
+  ._ce0gxz2 {
+    margin-bottom: 10px !important;
+    margin-top: 0px !important;
+  }
+}
+
+._aikyt2c {
+  display: block !important;
+}
+
+@media (min-width: 950px)
+{
+  ._aikyt2c {
+    display: -webkit-box !important;
+    display: -moz-box !important;
+    display: -ms-flexbox !important;
+    display: -webkit-flex !important;
+    display: flex !important;
+  }
+}
+
+._xgzx7ji {
+    min-width: 0px !important;
+    grid-column: span 12 !important;
+}
+
+@media (min-width: 950px)
+{
+  ._xgzx7ji {
+    grid-column: span 6 !important;
+  }
+}
+
+@media (min-width: 1128px)
+{
+  ._xgzx7ji {
+    grid-column: span 6 !important;
+  }
+}
